Fix styles in dark mode

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,9 +24,11 @@
   display: inline-block;
   padding: 10px 20px;
   font-size: 16px;
-  font-weight: bold; /* Make text bold */
+  font-weight: bold;
+  /* Make text bold */
   color: white;
-  background-color: #fc5200; /* Updated background color */
+  background-color: #fc5200;
+  /* Updated background color */
   border: none;
   border-radius: 5px;
   text-align: center;
@@ -36,17 +38,22 @@
 }
 
 .linkButton:hover {
-  background-color: #d94400; /* Adjusted hover color for consistency */
+  background-color: #d94400;
+  /* Adjusted hover color for consistency */
 }
 
-.linkButton.joinClub {
-  background-color: transparent; /* Transparent background */
-  color: black; /* Black text color */
-  border: 2px solid black; /* Black outline */
+.linkButton.outlineButton {
+  background-color: transparent;
+  /* Transparent background */
+  color: black;
+  /* Black text color */
+  border: 2px solid black;
+  /* Black outline */
 }
 
-.linkButton.joinClub:hover {
-  background-color: rgba(0, 0, 0, 0.1); /* Slightly darken on hover */
+.linkButton.outlineButton:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  /* Slightly darken on hover */
 }
 
 .buttonContainer {
@@ -84,7 +91,7 @@
 
 .nextRide .helperText {
   font-size: 14px;
-  color: #666;
+  opacity: .6;
   margin-bottom: 24px;
 }
 
@@ -106,5 +113,14 @@
 @media (prefers-color-scheme: dark) {
   .responsiveImage {
     filter: invert();
+  }
+
+  .nextRide {
+    background-color: #111;
+  }
+
+  .linkButton.outlineButton {
+    color: white;
+    border: 2px solid white;
   }
 }
